--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('https://readdy.ai/api/search-image?query=Futuristic%20digital%20workspace%20with%20holographic%20displays%2C%20subtle%20purple%20and%20blue%20neon%20glow%2C%20modern%20minimalist%20design%2C%20dark%20background%20with%20geometric%20patterns%2C%203D%20modeling%20software%20interface%20visible%2C%20abstract%20code%20elements%20floating%20in%20space%2C%20high-tech%20environment&width=1920&height=1080&seq=hero123&orientation=landscape');
+      background-image: url("astronaut-purple-3840x2160-22432.jpg");
       background-size: cover;
       background-position: center;
       opacity: 0.3;
@@ -244,7 +244,7 @@
     <!-- Begin dev notification overlay -->
     <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
       <div class="bg-[#1E293B] p-8 rounded-lg text-center max-w-md mx-4">
-        <h2 class="text-2xl font-bold text-white mb-4">Dev Notice</h2>
+        <h2 class="text-2xl font-bold text-white mb-4">Coution!</h2>
         <p class="text-gray-300 mb-6">The site is still under development. To continue please tap "Ok" button!</p>
         <button id="devNotificationBtn" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-button font-medium transition-all duration-300">Ok</button>
       </div>
@@ -356,11 +356,11 @@
       </div>
     </header>
     <!-- Hero Section -->
-    <section id="home" class="relative min-h-screen flex items-center pt-20">
-      <div id="particles" class="absolute inset-0 z-0"></div>
+    <section id="home" class="relative min-h-screen z-0 flex items-center pt-20">
+      <div id="particles" class="hero-bg absolute inset-0 z-0"></div>
       <div class="container mx-auto px-6 z-10">
         <div class="flex flex-col md:flex-row items-center">
-          <div class="w-full md:w-1/2 mb-10 md:mb-0">
+          <div class="w-full  md:w-1/2 mb-10 md:mb-0">
             <div class="mb-4 inline-block">
               <span
                 class="bg-primary/20 text-primary px-4 py-1 rounded-full text-sm font-medium"
@@ -371,7 +371,7 @@
             <h2 class="text-2xl md:text-3xl font-semibold mb-6 gradient-text">
               Creative Developer & 3D Designer
             </h2>
-            <p class="text-gray-400 mb-8 max-w-lg">
+            <p class="text-gray-400  mb-8 max-w-lg">
               With 3 years of software development experience and a passion for
               3D modeling, I create innovative solutions in the digital world.
               I'm ready to transform your vision into reality using
