--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       </div>
     </header>
     <!-- Hero Section -->
-    <section id="home" class="relative min-h-screen z-0 flex items-center pt-20">
+    <section id="home" class="relative min-h-screen  flex items-center pt-20">
       <div id="particles" class="hero-bg absolute inset-0 z-0"></div>
       <div class="container mx-auto px-6 z-10">
         <div class="flex flex-col md:flex-row items-center">
