--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url("astronaut-purple-3840x2160-22432.jpg");
+      background-image: url("astronout.jpg");
       background-size: cover;
       background-position: center;
       opacity: 0.3;
