--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vniverse77 | Creative Developer & 3D Designer</title>
+    <title>Vniverse77</title>
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
     <script>
       tailwind.config = {
@@ -1807,7 +1807,7 @@ I will start. #Blender3D #Tutorial
               "Jun",
               "Jul",
               "Aug",
-                           "Sep",
+              "Sep",
               "Oct",
               "Nov",
               "Dec",
