--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ Contains inventory tracking.
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
                 data-project=""
               >
-                <span><a href="https://sites.google.com/view/faceofdreamss/menu">See Details</a></span>
+                <span><a target="_blank" rel="noopener noreferrer" href="https://sites.google.com/view/faceofdreamss/menu">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -817,7 +817,7 @@ A comprehensive fitness application where he can see his graphics.
                 class="text-secondary hover:text-secondary/80 inline-flex items-center project-details-btn"
                 data-project=""
               >
-                <span><a href="https://github.com/Code-Creator-man/">See Details</a></span>
+                <span><a target="_blank" rel="noopener noreferrer" href="https://github.com/Code-Creator-man/">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -863,7 +863,7 @@ contains basic animations.
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
                 data-project=""
               >
-                <span><a href="https://github.com/Code-Creator-man/Blend-pro/blob/main/has-gowy.png">See Details</a></span>
+                <span><a target="_blank" rel="noopener noreferrer" href="https://github.com/Code-Creator-man/Blend-pro/blob/main/has-gowy.png">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -912,7 +912,7 @@ Timed data monitoring and reporting features.
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
                 data-project=""
               >
-                <span><a href="https://github.com/Code-Creator-man/">See Details</a></span>
+                <span><a target="_blank" rel="noopener noreferrer" href="https://github.com/Code-Creator-man/">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -963,7 +963,7 @@ Comprehensive mobile application.
                 class="text-secondary hover:text-secondary/80 inline-flex items-center project-details-btn"
                 data-project=""
               >
-                <span><a href="https://github.com/Code-Creator-man/">See Details</a></span>
+                <span><a target="_blank" rel="noopener noreferrer" href="https://github.com/Code-Creator-man/">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -1007,7 +1007,7 @@ It includes lighting and material studies.
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
                 data-project=""
               >
-                <span><a href="https://github.com/Code-Creator-man/Blend-pro/blob/main/my-room.png">See Details</a></span>
+                <span><a target="_blank" rel="noopener noreferrer" href="https://github.com/Code-Creator-man/Blend-pro/blob/main/my-room.png">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -1057,7 +1057,7 @@ You can get them here.
               </div>
               <div>
                 <h3 class="text-xl font-semibold">GitHub</h3>
-                <a href="https://github.com/Code-Creator-man" class="text-gray-400 hover:text-primary"
+                <a target="_blank" rel="noopener noreferrer" href="https://github.com/Code-Creator-man" class="text-gray-400 hover:text-primary"
                   >@Code-Creator-man</a
                 >
               </div>
@@ -1081,6 +1081,7 @@ You can get them here.
             </div>
             <a
               href="https://github.com/Code-Creator-man?tab=repositories"
+              target="_blank" rel="noopener noreferrer"
               class="bg-[#0F172A] hover:bg-[#1E293B] text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
               <span class="w-5 h-5 flex items-center justify-center mr-2">
@@ -1099,7 +1100,7 @@ You can get them here.
               </div>
               <div>
                 <h3 class="text-xl font-semibold">LinkedIn</h3>
-                <a href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/" class="text-gray-400 hover:text-[#0077B5]"
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/" class="text-gray-400 hover:text-[#0077B5]"
                   >Vniverse77</a
                 >
               </div>
@@ -1146,6 +1147,7 @@ Creative Technologies
             </div>
             <a
               href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/"
+              target="_blank" rel="noopener noreferrer"
               class="bg-[#0077B5] hover:bg-[#0077B5]/80 text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
               <span class="w-5 h-5 flex items-center justify-center mr-2">
@@ -1164,7 +1166,7 @@ Creative Technologies
               </div>
               <div>
                 <h3 class="text-xl font-semibold">Start</h3>
-                <a href="https://tmstart.me/face_of_dreams" class="text-gray-400 hover:text-[#0077B5]"
+                <a target="_blank" rel="noopener noreferrer" href="https://tmstart.me/face_of_dreams" class="text-gray-400 hover:text-[#0077B5]"
                   >@face_of_dreams</a
                 >
               </div>
@@ -1211,6 +1213,7 @@ Creative Technologies
               </div>
             </div>
             <a
+              target="_blank" rel="noopener noreferrer"
               href="https://tmstart.me/+4GyB9ZjXeYrxE4RDmdc7"
               class="bg-[#0077B5] hover:bg-[#0077B5]/80 text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
@@ -1230,7 +1233,7 @@ Creative Technologies
               </div>
               <div>
                 <h3 class="text-xl font-semibold">Twitter</h3>
-                <a href="https://x.com/Yslamow_B" class="text-gray-400 hover:text-[#1DA1F2]"
+                <a target="_blank" rel="noopener noreferrer" href="https://x.com/Yslamow_B" class="text-gray-400 hover:text-[#1DA1F2]"
                   >@Yslamow_B</a
                 >
               </div>
@@ -1302,6 +1305,7 @@ I will start. #Blender3D #Tutorial
               </div>
             </div>
             <a
+              target="_blank" rel="noopener noreferrer"
               href="https://x.com/Yslamow_B"
               class="bg-[#1DA1F2] hover:bg-[#1DA1F2]/80 text-white w-full py-2 rounded-button font-medium transition-all duration-300 flex items-center justify-center whitespace-nowrap"
             >
@@ -1445,7 +1449,7 @@ I will start. #Blender3D #Tutorial
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
           <div>
             <!-- Replace the text logo with your footer PNG -->
-            <a href="https://tmstart.me/face_of_dreams" class="logo mb-4 inline-block">
+            <a target="_blank" href="https://tmstart.me/face_of_dreams" class="logo mb-4 inline-block">
               <!-- Replace 'your-footer-logo.png' with your PNG file path -->
               <img src="ubuntu-logo.png" alt="Footer Logo" class="w-32">
             </a>
@@ -1455,6 +1459,7 @@ I will start. #Blender3D #Tutorial
             </p>
             <div class="flex flex-wrap gap-4">
               <a
+                target="_blank" rel="noopener noreferrer"
                 href="https://github.com/Code-Creator-man"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-primary/20 transition-colors"
               >
@@ -1462,31 +1467,35 @@ I will start. #Blender3D #Tutorial
               </a>
               <a
                 href="https://www.linkedin.com/in/berdimuhammet-yslamow-b7900a319/"
+                target="_blank" rel="noopener noreferrer"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#0077B5]/20 transition-colors"
               >
                 <i class="ri-linkedin-fill text-lg text-[#0077B5]"></i>
               </a>
               <a
                 href="https://x.com/Yslamow_B"
+                target="_blank" rel="noopener noreferrer"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#1DA1F2]/20 transition-colors"
               >
                 <i class="ri-twitter-x-fill text-lg text-[#ffffff]"></i>
               </a>
               <a
                 href="https://discord.gg/4GyB9ZjXeYrxE4RDmdc7"
+                target="_blank" rel="noopener noreferrer"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#485cf0]/20 transition-colors"
               >
                 <i class="ri-discord-fill text-lg text-[#1f38ee]"></i>
               </a>
-               </a>
               <a
                 href="https://tmstart.me/+4GyB9ZjXeYrxE4RDmdc7"
+                target="_blank" rel="noopener noreferrer"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#004677]/20 transition-colors"
               >
                 <i class="ri-telegram-fill text-lg text-[#0984dc]"></i>
               </a>
               <a
                 href="https://open.spotify.com/playlist/2Nrn8p6wkoZH2IUDbVIEnl"
+               target="_blank" rel="noopener noreferrer"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#1DB954]/20 transition-colors"
               >
                 <i class="ri-spotify-fill text-lg text-[#1DB954]"></i>
