npm api and link fixes

--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@ I will start. #Blender3D #Tutorial
               <a
                 target="_blank" rel="noopener noreferrer"
                 href="https://github.com/Code-Creator-man"
-                
+
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-primary/20 transition-colors"
               >
                 <i class="ri-github-fill text-lg"></i>
@@ -1481,7 +1481,7 @@ I will start. #Blender3D #Tutorial
                 <i class="ri-twitter-x-fill text-lg text-[#ffffff]"></i>
               </a>
               <a
-                href="https://discord.gg/4GyB9ZjXeYrxE4RDmdc7"
+                href="https://discord.gg/qSvHgfwg"
                 target="_blank" rel="noopener noreferrer"
                 class="w-10 h-10 flex items-center justify-center bg-[#1E293B] rounded-full hover:bg-[#485cf0]/20 transition-colors"
               >
