file names changed. You OK me?

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <!-- Updated header logo size -->
         <a href="#home" class="logo">
           <!-- Replace 'ubuntu-logo.png' with your PNG file path -->
-          <img src="ubuntu-logo.png" alt="Header Logo" class="w-[69px] h-[69px]">
+          <img src="Tux.png" alt="Header Logo" class="w-[69px] h-[69px]">
         </a>
         <nav class="hidden md:flex items-center space-x-8">
           <a
@@ -394,7 +394,7 @@
             <div class="relative w-80 h-80 md:w-96 md:h-96">
 
               <img
-                src="rick-sanchez-rick-3840x2160-9515.jpg"
+                src="rick.jpg"
                 alt="Me"
                 class="w-full h-full object-cover rounded-full border-4 border-primary/30"
               />
@@ -658,14 +658,15 @@
             </div>
             <div class="bg-[#1E293B] rounded-lg overflow-hidden">
               <img
-                src="kitchen.png"
+                src="rick-and-morty.jpg"
                 alt="3D Modelleme Örneği"
-                class="w-full h-64 object-cover"
+                class="w-cover h-54 object-cover"
               />
               <div class="p-6">
-                <h4 class="text-lg font-medium mb-2">3D Modelling Portfolio</h4>
+                <h4 class="text-lg font-medium mb-2">Collabirative Projects</h4>
                 <p class="text-gray-400 mb-4">
-                  Characters, environment and product models also some of the projects.
+                  Characters, environment and product models also some of the projects. And also more will be added soon.
+                  Be one of the first to experience these exciting developments!
                 </p>
                 <a
                   href="#portfolio"
@@ -729,7 +730,7 @@
           <div class="bg-[#1E293B] rounded-lg overflow-hidden card-hover" data-category="web">
             <div class="relative">
               <img
-                src="Screenshot From 2025-05-31 10-31-08.png"
+                src="com-site.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
@@ -780,7 +781,7 @@ Contains inventory tracking.
           >
             <div class="relative">
               <img
-                src="images.png"
+                src="un-maint.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
@@ -828,7 +829,7 @@ A comprehensive fitness application where he can see his graphics.
           <div class="bg-[#1E293B] rounded-lg overflow-hidden card-hover" data-category="3d">
             <div class="relative">
               <img
-                src="has-gowy.png"
+                src="living-room.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
@@ -877,7 +878,7 @@ contains basic animations.
           >
             <div class="relative">
               <img
-                src="images.png"
+                src="un-maint.png"
                 alt="Analitik Dashboard"
                 class="w-full h-56 object-cover"
               />
@@ -926,7 +927,7 @@ Timed data monitoring and reporting features.
           >
             <div class="relative">
               <img
-                src="images.png"
+                src="un-maint.png"
                 alt="Not even needed"
                 class="w-full h-56 object-cover"
               />
@@ -974,7 +975,7 @@ Comprehensive mobile application.
           <div class="bg-[#1E293B] rounded-lg overflow-hidden card-hover" data-category="3d">
             <div class="relative">
               <img
-                src="my-room.png"
+                src="my-setup.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
@@ -1451,7 +1452,7 @@ I will start. #Blender3D #Tutorial
             <!-- Replace the text logo with your footer PNG -->
             <a target="_blank" href="https://tmstart.me/face_of_dreams" class="logo mb-4 inline-block">
               <!-- Replace 'your-footer-logo.png' with your PNG file path -->
-              <img src="ubuntu-logo.png" alt="Footer Logo" class="w-32">
+              <img src="Tux.png" alt="Footer Logo" class="w-32">
             </a>
             <p class="text-gray-400 mb-6">
               I serve creative software solutions & modern 3D designs.
