--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
   </head>
   <body class="bg-[#0F172A] text-gray-200">
     <!-- Begin dev notification  -->
-    <!-- <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
+    <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
       <div class="bg-[#1E293B] p-8 rounded-lg text-center max-w-md mx-4">
-        <h2 class="text-2xl font-bold text-white mb-4">Coution!</h2>
-        <p class="text-gray-300 mb-6">The site is still under development. To continue please tap "Ok" button!</p>
+        <h2 class="text-2xl font-bold text-white mb-4">Caution!</h2>
+        <p class="text-gray-300 mb-6">The site is still under development. To continue please tap "Ok" button! <br>
+        Don't forget to join our <a class="text-purple-500 font-bold hover:text-white transition-colors" href="https://discord.gg/qSvHgfwg">Discord</a> server!!!
+         </p>
         <button id="devNotificationBtn" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-button font-medium transition-all duration-300">Ok</button>
       </div>
-    </div> -->
+    </div>
     <!-- End dev notification -->
     <div class="custom-cursor"></div>
     <div class="custom-cursor-follower"></div>
@@ -164,6 +166,7 @@
     <section id="home" class="relative min-h-screen  flex items-center pt-20">
       <div id="particles" class="hero-bg absolute inset-0 z-0"></div>
       <div class="container mx-auto px-6 z-10">
+        <!-- <div class="code-clean"><b>Code Clean!!</b></div> -->
         <div class="flex flex-col md:flex-row items-center">
           <div class="w-full  md:w-1/2 mb-10 md:mb-0">
             <div class="mb-4 inline-block">
@@ -186,7 +189,7 @@
               <a
                 href="#contact"
                 class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-button font-medium transition-all duration-300 whitespace-nowrap"
-                >Get in Touch</a
+                >Want to hire me?</a
               >
               <a
                 href="#portfolio"
@@ -464,7 +467,7 @@
             </div>
             <div class="bg-[#1E293B] rounded-lg overflow-hidden">
               <img
-                src="rick-and-morty.jpg"
+                src="trustme.png"
                 alt="3D Modelleme Örneği"
                 class="w-cover h-54 object-cover"
               />
@@ -834,11 +837,14 @@ It includes lighting and material studies.
       <section id="news" class="py-20 relative gradient-bg">
         <div class="container mx-auto px-6">
           <div class="text-center mb-16">
-            <h2 class="text-3xl md:text-4xl font-bold mb-4">Latest News</h2>
+            <h2 class="text-3xl md:text-4xl font-bold mb-4">Latest News (under maintenance)</h2>
             <p class="text-gray-400 max-w-2xl mx-auto">
-              Stay updated with the latest news and articles.
+              <b>Stay tuned for updates!
+                <br />
+                Bu bolumi gutarmagmyza az galdy, sabyr ediň!!!
+              </b>
+              <img class="rounded-lg overflow-hidden" src="rick-and-morty.jpg" alt="">
             </p>
-            <a href="#" class="text-primary hover:underline">Read More</a>
           </div>
         </div>
       </section>
@@ -973,8 +979,8 @@ Creative Technologies
               </div>
               <div>
                 <h3 class="text-xl font-semibold">Start</h3>
-                <a target="_blank" rel="noopener noreferrer" href="https://tmstart.me/face_of_dreams" class="text-gray-400 hover:text-[#0077B5]"
-                  >@face_of_dreams</a
+                <a target="_blank" rel="noopener noreferrer" href="https://tmstart.me/vniverse77" class="text-gray-400 hover:text-[#0077B5]"
+                  >@Vniverse77</a
                 >
               </div>
             </div>
@@ -1474,9 +1480,10 @@ I will start. #Blender3D #Tutorial
       </div>
     </div>
     <!------------------------- Loading Screen ---------------- -->
-    <!-- <div
-      class="fixed inset-0 bg-[#0F172A] z-[9999] flex items-center justify-center"
+    <div
+      class="blur-overlay fixed inset-0 z-[9999] flex items-center justify-center"
       id="loadingScreen"
+      style="background: url('samsung.jpg') no-repeat center center/cover;"
     >
       <div class="text-center">
         <div class="text-4xl font-['Pacifico'] gradient-text mb-4">
@@ -1489,7 +1496,7 @@ I will start. #Blender3D #Tutorial
           ></div>
         </div>
       </div>
-    </div> -->
+    </div>
     <script id="customCursorScript">
       document.addEventListener("DOMContentLoaded", function () {
         const cursor = document.querySelector(".custom-cursor");
