Gurban bayramynyz bilengit add .

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
           </button>
         </div>
       </div>
+      <!-- !!! Do not touch here Mobile toggle section is HERE -->
       <div
         class="md:hidden bg-[#1E293B] absolute w-full transition-all duration-300 overflow-hidden"
         id="mobileMenu"
